# emperor

./: .gitignore  README.md  config.yaml.example  pyproject.toml  start.sh
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/scripts/: sync-a2ui-css.mjs  sync-a2ui-schemas.mjs  verify-chat-timeline.mjs  verify-markdown-html.mjs
dashboard/src/: App.tsx  main.tsx
dashboard/vite-plugins/: fixA2uiCssModules.ts
docs/: DEPLOYMENT.md
skills/backend-api-debug/: SKILL.md
skills/frontend-ui-audit/: SKILL.md
skills/skill-routing-playbook/: SKILL.md
src/: __init__.py  constants.py  logging_setup.py
src/acp/: __init__.py  (+1 more)
tests/: conftest.py  helpers.py  test_a2ui.py  test_ag_ui_mapper.py  test_agent_loop.py  test_agents_mcp_skills_api.py  test_api_integration.py  test_chat_io.py  test_chat_sse_api.py  test_command_registry.py  test_config.py  test_dashboard_app_api.py  test_dashboard_config_api.py  test_delegation_code.py  test_event_convert.py  test_extended.py  test_file_tools.py  test_follow_up_questions.py  test_kanban_api.py  test_kanban_db.py  test_kanban_dispatcher.py  test_kanban_tools.py  test_loop_guard.py  test_mcp_plugins_hooks.py  test_memory_skills.py  test_multi_turn.py  test_openai_sse.py  test_prompt_compress.py  test_repl_display.py  test_repl_display_progress.py  test_repl_read_line.py  test_repl_user_echo.py  test_schedule_intent.py  test_session.py  test_session_lifecycle.py  test_session_profile.py  test_session_time.py  test_session_title.py  test_session_visibility.py  test_shiba_compat_api.py  (+7 more)
(+244 files in other folders)
